Fix UI improvements: remove scenarios margin, add time to dates, fix scrolling and word wrap

--- a/src/app/components/manual-tasks-page/manual-tasks-page.component.scss
+++ b/src/app/components/manual-tasks-page/manual-tasks-page.component.scss
@@ -3,7 +3,8 @@
 
 :host {
   display: block;
-  min-height: 100vh;
+  height: 100vh;
+  overflow-y: auto;
   background-color: var(--mat-sys-surface);
   color: var(--mat-sys-on-surface);
 }
