--- a/src/app/components/scenarios/scenarios.component.scss
+++ b/src/app/components/scenarios/scenarios.component.scss
@@ -14,10 +14,6 @@
   flex: 1;
   min-height: 0;
   min-width: 1000px;
-  margin-top: 40px;
-  margin-left: 40px;
-  margin-right: 40px;
-  margin-bottom: 40px;
 }
 
 .add-margin {
